Changelog:
----------

2015-09-10 v1.1.4 Oliver Riesen (oliver@riesen.org)

    - Database column "ip" extended to 45 characters for ipv6 addresses.

2009-08-01 v1.1.3

    - Added a new logged event: User sends a private message.
      The fact that a PM was sent and the number of recipients are logged.

2009-06-27 v1.1.2

    - Fixed bug #865: Don't log errors if the silence operator @ is used.
      Thanks to Markus for both the bug report and the patch that fixes
      the issue.

    - Fixed bug #862: the event logs could not be downloaded if the
      maximum number of stored log lines was set to 0 ("no limit").
      Thanks to Markus Fischer for the bug report.

    - Added a new logged event: User requests a new password.
      Thanks to CBiLL for the idea. This feature requires a new hook
      that is only available in Phorum 5.2.13 and up.

    - Passwords that are logged in log messages are now masked with "XXXX".
      If an admin wants to have the passwords logged to the database
      (not recommended for security reasons), then the module configuration
      option "Hide passwords in log messages" can be disabled.

    - Modified the failed login event: if the username that was used is
      known to Phorum, then the user_id is set for the event. This way,
      failed login events can be filtered by the username as long as an
      existing username was used. Thanks to CBiLL for the idea.

    - Fixed a bug: with event logging programmatically suspended,
      not all hooks returned the correct data. This feature is not
      widely used (if at all), so there is no real user impact.

2009-05-19 v1.1.1

    - An option was added to download the event logs as HTML or TXT.
      Thanks to Joe Curia (a.k.a. Azumandias) for providing us with
      the patch for this feature.

    - Implemented automatic cleanup of old event logs. Previously,
      the event log was only cleaned up when the admin opened the