@@ -3,6 +3,9 @@ Changelog:
 
 2015-09-10 v1.1.4 Oliver Riesen (oliver@riesen.org)
 
+    - Fixed multiple conversion of HTML special characters in logviewer link (see
+      http://www.phorum.org/phorum5/read.php?62,133303,155073#msg-155073)
+
     - Database column "ip" extended to 45 characters for ipv6 addresses.
 
 2009-08-01 v1.1.3
